--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <span class="desktop">Desktop</span>
 
     </header>
+   <section class="conteudo">
+    <div class="sorteio">
+        De <input type="text" id="inicio"> até
+        <input type="text" id="fim">
+        <br>
+        <button class="btn_sorteio">Sortear</button>
 
 
-
-    
-    <button onclick="aperta()">Clique Aqui!</button>
 </body>
 </html>
